--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+spring.application.name= @project.artifactId@
+server.port=${APP_PORT:8081}
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DATABASE:transacaodb}?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql: true
+
+#KAFKAA
+
+# Endereço do Kafka
+spring.kafka.bootstrap-servers=${KAFKA_HOST:localhost:9092}
+
+# Identificador do grupo de consumo
+spring.kafka.consumer.group-id=${KAFKA_CONSUMER_GROUP_ID:transacoes}
+
+# Modelo de coleta do consumidor (latest, earliest, none)
+spring.kafka.consumer.auto-offset-reset=${KAFKA_AUTO-OFFSET-RESET:latest}
+
+#Tópico de transacoes!
+spring.kafka.topic.transactions= ${KAFKA_TOPIC_TRANSACTIONS:transacoes}
