--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.kafka.consumer.auto-offset-reset=${KAFKA_AUTO-OFFSET-RESET:latest}
 
 #Tópico de transacoes!
 spring.kafka.topic.transactions= ${KAFKA_TOPIC_TRANSACTIONS:transacoes}
+
+#KEYCLOAK
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://keycloak:8080/auth/realms/transacao-realm}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://keycloak:8080/auth/realms/transacao-realm/protocol/openid-connect/certs}
